--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
+*/bin
+*/obj
 *.exe
 *.obj
 .vs
